# TentacleAdaptiveController

./: .gitignore  CMakeLists.txt  PD_BORDERLESS_Results.csv  PD_BORDERLESS_Results.csv.old  PD_Results.csv  P_Results.csv  README.md  Uopt2_Nav2_OPT2RE.csv  Validation.csv  extractedPoints.csv
archive/: AdaptiveControllerPD.cpp  ControllerPrototype.cpp  PD_BORDERLESS_Results.csv  P_Results.csv  extractedPoints.csv  testIdealShape.cpp  validations.cpp
extraFunctions/: extraCameraFuncs.cpp  extraCompFuncs.cpp
include/: ControllerPrototype.hpp  ExtraComputationFuncs.hpp  PD_Insertion.hpp  extraCameraFuncs.hpp
libs/: CMakeLists.txt
libs/include/AdaptiveControllerCompClass/: compClass.hpp
libs/include/AdaptiveControllerVisionClass/: visionClass.hpp
libs/src/: CMakeLists.txt  compClass.cpp  visionClass.cpp
src/: AdaptiveController.cpp  ControllerPrototype.cpp  ControllerPrototypePD.cpp  OL_Insertion.cpp  PD_Insertion.cpp  PD_borderless.cpp  cl_mockup.cpp  color_filtering.cpp  errorTrials.cpp  exportCentreLine.cpp  introduceCSV.cpp  maskExtraction.cpp  run_camera.cpp  set3DField.cpp  testComps.cpp  test_JointDetection.cpp  thresholds_cal.cpp  validations.cpp
